--- a/HTML, CSS y JS/estilo.css
+++ b/HTML, CSS y JS/estilo.css
@@ -1,5 +1,5 @@
 /*Fondo del juego de forma responsive*/
-body{
+body {
     background-image: url(img/fondo0.jpg);
     background-position: center center;
     background-repeat: no-repeat;
@@ -10,112 +10,144 @@ body{
 
 /*diseño de cada etiqueta (heading y parrafo)*/
 
-h1{ font-size: 3.5em;}
-h2{ font-size: 1.75em;
-	margin-top: 40px;}
-h3{ font-size: 25px;
-	margin-top: 0.7%;
-	color:#000000;
-	background-color: #3BBD83;
-	border-radius: 7px;
-	display:inline-block;
-	box-sizing: content-box;
+h1 {
+    font-size: 3.5em;
 }
 
-h5{ font-size: 15px;}
+h2 {
+    font-size: 1.75em;
+    margin-top: 40px;
+}
 
-p{ font-size: 30px;
-	margin-top: 40px;
-	margin-bottom: 40px;
-	font-family: 'Raleway', sans-serif;
-	color: #131715;
-	font-weight: bolder;
+h3 {
+    font-size: 25px;
+    margin-top: 0.7%;
+    color: #000000;
+    background-color: #3BBD83;
+    border-radius: 7px;
+    display: inline-block;
+    box-sizing: content-box;
+}
+
+h5 {
+    margin-top: 0.7%;
+    font-size: 15px;
+}
+
+p {
+    font-size: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    font-family: 'Raleway', sans-serif;
+    color: #131715;
+    font-weight: bolder;
 }
 
 /*titulo principal del juego*/
-.titulo-h1{
+.titulo-h1 {
 
-	text-align: center;
-	margin-top: 15%;
-	margin-bottom: auto;
-	font-family: 'Raleway', sans-serif;
-	font-size: 50px;
-	color: #131715;
+    text-align: center;
+    margin-top: 10%;
+    margin-bottom: auto;
+    font-family: 'Raleway', sans-serif;
+    font-size: 50px;
+    color: #131715;
 }
+
 /*posicion central del index*/
-header{
+header {
 
-	text-align: center;
-	margin-top: 5%;
-	margin-bottom: auto;
-	font-family: 'Raleway', sans-serif;
-	color: #000000;
+    text-align: center;
+    margin-top: 5%;
+    margin-bottom: auto;
+    font-family: 'Raleway', sans-serif;
+    color: #000000;
 }
+
 /*Diseño de los botones*/
-button{
-	font-size: 25px;
-	font-weight: bold;
-	font-family: 'Raleway', sans-serif;
+button {
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Raleway', sans-serif;
     margin-top: 5px;
-	padding: 10px 30px;
-	border-radius: 7px;
-	border: 2px solid #525A58;
-	box-shadow: 2px 2px 10px #505050;
-	color: black;
-	background-color: #06C98D;
+    padding: 10px 30px;
+    border-radius: 7px;
+    border: 2px solid #525A58;
+    box-shadow: 2px 2px 10px #505050;
+    color: black;
+    background-color: #06C98D;
 }
+
 /*boton de Salir*/
-#Salir{
-	font-size: 25px;
-	font-family: 'Raleway', sans-serif;
-	border-radius: 7px;
+#Salir {
+    font-size: 25px;
+    font-family: 'Raleway', sans-serif;
+    border-radius: 7px;
     margin-left: 46%;
     margin-top: 7px;
-	border: 2px solid #525A58;
-	box-shadow: 2px 2px 10px #505050;
-	color: black;
-	background-color: #06C98D;
+    border: 2px solid #525A58;
+    box-shadow: 2px 2px 10px #505050;
+    color: black;
+    background-color: #06C98D;
     position: relative;
 }
-#Salir:hover{
-	background-color:#3DA97A;
+
+#Salir:hover {
+    background-color: #3DA97A;
 }
 
 /*Cambia de color cuando se acerca el cursor de los botones*/
-button:hover{
-	background-color:#1E755A;
+button:hover {
+    background-color: #1E755A;
 }
 
-/* subtitulos de como jugar*/ 
-.alineacion{
+/* subtitulos de como jugar*/
+.alineacion {
 
-	text-align: center;
-	font-family: 'Raleway', sans-serif;
-	padding: 20px;
-}
-#subtitulo{
-	margin-top: 5px;
-	font-family: 'Raleway', sans-serif;
-	color:#131715;
-	text-decoration-line: underline;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    padding: 20px;
 }
 
-img{
-     max-width: 16%;
-     max-height: 16%;
-     display: block;
-     margin: 0px auto;
-   
+#subtitulo {
+    margin-top: 5px;
+    font-family: 'Raleway', sans-serif;
+    color: #131715;
+    text-decoration-line: underline;
 }
+
+img {
+    max-width: 14%;
+    max-height: 14%;
+    display: block;
+    margin: 0 auto;
+
+}
+
+/*Llenar el nombre del jugador*/
+#nombre {
+    margin-top: 7px;
+    margin-bottom: -10px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bolder;
+    padding: 10px 5px;
+    width: 13%;
+    background-color: #3BBD83;
+    color: #000000;
+    border-radius: 7px;
+
+}
+
 /*Click o space del como jugar*/
-.color-extra{
-	color:#195B27;
-    
+.color-extra {
+    color: #195B27;
+
 }
 
 /*pie de pagina*/
-#id-autores{
-	color:#F8F8F8;
-	text-align: left;
-	margin-bottom:70px;/*para que se vea bien mobile es 50%*/
+#id-autores {
+    color: #F8F8F8;
+    text-align: left;
+    margin-bottom: 70px; /*para que se vea bien mobile es 50%*/
 }
+
